<EditableTitle/> minor style fix (#3176)
very small fix for the case where the value is long and theres an unwanted horizontal scrollbar

--- a/src/EditableTitle/EditableTitle.scss
+++ b/src/EditableTitle/EditableTitle.scss
@@ -17,7 +17,7 @@ $statusColor: $D40;
   display: flex;
   flex-grow: 0;
   transition: all 0.3s ease;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .activationIndicatorHasFocus {
